Blanket replacement of ".pk" with ".id"

--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-sm-8" style="margin-left:-30px;">
                     <input id="uploadFile" type="text" placeholder="Data File" class="form-control input-sm" readonly>
-                    <input type="hidden" name="event" value="{{ g.event.pk }}">
+                    <input type="hidden" name="event" value="{{ g.event.id }}">
                 </div>
               </div>
             </div>
