--- a/apollo/frontend/templates/frontend/incident_add.html
+++ b/apollo/frontend/templates/frontend/incident_add.html
@@ -60,7 +60,7 @@
           <button type="submit" class="btn btn-info btn-lg btn-block" style= "margin-left:1em;">Save</button>
         </div>
         <div class="col-md-2">
-          <a class="btn btn-default btn-lg btn-block" style= "margin-left:;" href="{{ url_for('submissions.submission_list', form_id=form.pk) }}">Cancel</a>
+          <a class="btn btn-default btn-lg btn-block" style= "margin-left:;" href="{{ url_for('submissions.submission_list', form_id=form.id) }}">Cancel</a>
         </div>
       </div>
     </div>
