changed linked text to grouped buttons for better accessibility

--- a/apollo/frontend/templates/admin/base.html
+++ b/apollo/frontend/templates/admin/base.html
@@ -1,6 +1,6 @@
 {% import 'admin/layout.html' as layout with context -%}
 {% import 'admin/static.html' as admin_static with context %}
-{% from 'admin/macros.html' import locations_builder, locations_list, participants_list, forms_list %}
+{% from 'admin/macros.html' import locations_builder, locations_list, samples_list, participants_list, forms_list %}
 <!DOCTYPE html>
 <html>
   <head>
