--- a/apollo/frontend/templates/admin/macros.html
+++ b/apollo/frontend/templates/admin/macros.html
@@ -1,15 +1,34 @@
 {% macro locations_builder(model, column) %}
-  <a href="{{ url_for('locations.locations_builder', location_set_id=model.id) }}">{{ model.location_types.count() }}</a>
+<div class="btn-group btn-group-sm" role="group" aria-label="...">
+  <a href="javascript:;" class="btn btn-default disabled">{{ model.location_types.count() }}</a>
+  <a href="{{ url_for('locations.locations_builder', location_set_id=model.id) }}" class="btn btn-default">Manage</a>
+</div>
 {% endmacro %}
 
 {% macro locations_list(model, column) %}
-  <a href="{{ url_for('locations.location_list', location_set_id=model.id) }}">{{ model.locations.count() }}</a>
+<div class="btn-group btn-group-sm" role="group" aria-label="...">
+  <a href="javascript:;" class="btn btn-default disabled">{{ model.locations.count() }}</a>
+  <a href="{{ url_for('locations.location_list', location_set_id=model.id) }}" class="btn btn-default">Manage</a>
+</div>
+{% endmacro %}
+
+{% macro samples_list(model, column) %}
+<div class="btn-group btn-group-sm" role="group" aria-label="...">
+  <a href="javascript:;" class="btn btn-default disabled">{{ model.samples.count() }}</a>
+  <a href="javascript:;" class="btn btn-default disabled">Manage</a>
+</div>
 {% endmacro %}
 
 {% macro participants_list(model, column) %}
-  <a href="{{ url_for('participants.participant_list', participant_set_id=model.id) }}">{{ model.participants.count() }}</a>
+<div class="btn-group btn-group-sm" role="group" aria-label="...">
+  <a href="javascript:;" class="btn btn-default disabled">{{ model.participants.count() }}</a>
+  <a href="{{ url_for('participants.participant_list', participant_set_id=model.id) }}" class="btn btn-default">Manage</a>
+</div>
 {% endmacro %}
 
 {% macro forms_list(model, column) %}
-  <a href="{{ url_for('forms.list_forms', form_set_id=model.id) }}">{{ model.forms.count() }}</a>
+<div class="btn-group btn-group-sm" role="group" aria-label="...">
+  <a href="javascript:;" class="btn btn-default disabled">{{ model.forms.count() }}</a>
+  <a href="{{ url_for('forms.list_forms', form_set_id=model.id) }}" class="btn btn-default">Manage</a>
+</div>
 {% endmacro %}
