--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -168,7 +168,7 @@
       <tr{% if field.tag in submission.flagged_fields and submission.form.verifiable and perms.edit_submission_verification_status.can() %} class="warning"{% endif %}>
         <th>{{ field.tag }}</th>
         <td>{{ field.description }}
-          {%- if field.options and not field.allows_multiple_values %}
+          {%- if field.options and not field.is_multi_choice %}
           <span class="options">
           {% for item in field.options|dictsort(false, 'value') %}
           <span class="option"><strong>({{ item.1 }})</strong> {{ item.0 }}</span>
@@ -250,7 +250,7 @@
     {%- for field in group.fields %}
     <tr>
       <th style="text-align: center">{{ field.tag }}</th>
-      {% if field.is_comment_field %}
+      {% if field.is_comment %}
       <td colspan="2"{%- if submission_form[field.tag].errors %} class="danger"{%- endif -%}>
         {{ render_submission_field(submission_form[field.tag]) }}<br />
         <p style="margin-top:-0.5em; margin-bottom:0">{{ field.description }}</p>
