--- a/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
@@ -32,7 +32,7 @@
 							<th width="250">{{ _('Location') }}</th>
 							<th width="100" style="text-align:center">N</th>
 							{% for tag, tag_description, tag_stats in incidents_summary.top %}
-							<th width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=tag) }}">{{ tag }}</a></abbr></th>
+							<th width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.id, location_id=location.id, tag=tag) }}">{{ tag }}</a></abbr></th>
 							{% endfor %}
 						</tr>
 						<tr>
@@ -68,13 +68,13 @@
 					{% for group in field_groups %}
 					{% if field_groups[group] %}
 					<h4>{{ group }}</h4>
-						{% for field in field_groups[group] if not field.represents_boolean %}
+						{% for field in field_groups[group] if not field.is_boolean %}
 							{% set question_summary = form|checklist_question_summary(field, location, dataframe) %}
 							{% set stats = question_summary.stats %}
 							<table width="100%" class="table table-striped table-bordered">
 								<tr>
-									<td width="30" rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><strong>{{ field.name }}</strong></td>
-									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
+									<td width="30" rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><strong>{{ field['tag'] }}</strong></td>
+									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.id, location_id=location.id, tag=field.name) }}">{{ field.description }}</a></td>
 									<td>&nbsp;</td>
 									{% if stats.type == 'continuous' %}
 									<td bgcolor="#eee">{{ _('Mean') }}</td>
