--- a/apollo/process_analysis/templates/process_analysis/macros/analysis_navigation.html
+++ b/apollo/process_analysis/templates/process_analysis/macros/analysis_navigation.html
@@ -4,13 +4,13 @@
   {% for location in navigation_data.locations %}
     {% if navigation_data.analysis_type == 'process' %}
       {% if navigation_data.tag %}
-        {% set linkto = url_for('process_analysis.process_analysis_with_location_and_tag', form_id=navigation_data.form.pk, location_id=location.pk, tag=navigation_data.tag) %}
+        {% set linkto = url_for('process_analysis.process_analysis_with_location_and_tag', form_id=navigation_data.form.id, location_id=location.id, tag=navigation_data.tag) %}
       {% else %}
-        {% set linkto = url_for('process_analysis.process_analysis_with_location', form_id=navigation_data.form.pk, location_id=location.pk) %}
+        {% set linkto = url_for('process_analysis.process_analysis_with_location', form_id=navigation_data.form.id, location_id=location.id) %}
       {% endif %}
   <li><a href="{{ linkto }}">{{ location.name }}</a></li>
   {%- elif navigation_data.analysis_type == 'results' -%}
-  <li><a href="{{ url_for('process_analysis.results_analysis_with_location', form_id=navigation_data.form.pk, location_id=location.pk) }}">{{ location.name }}</a></li>
+  <li><a href="{{ url_for('process_analysis.results_analysis_with_location', form_id=navigation_data.form.id, location_id=location.id) }}">{{ location.name }}</a></li>
     {% endif %}
   {% endfor %}
 </ul>
